Added basic styling for input field

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,48 @@
  *= require_tree .
  *= require_self
  */
+ @import "notes/index";
+
+ body {
+  background-color: rgb(255, 255, 255);
+ }
+ body, h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+ }
+
+ .head-container {
+  width: 100vw;
+  background-color: rgb(38, 37, 37);
+ }
+ .head-container h1 {
+  text-align: center;
+  padding: 10px 0;
+  color: #ffffff;
+ }
+ .input-card {
+  width: 80%;
+  margin: 20px auto;
+  border-radius: 12px;
+  padding: 10px; /* Add padding to create some space between the border and contents */
+  box-sizing: border-box; /* Include padding and border in the width calculation */
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+-webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+}
+
+.input-card div {
+  margin-bottom: 10px;
+}
+
+.input-card label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.input-card input,
+.input-card textarea {
+  width: 100%;
+  box-sizing: border-box; /* Include padding and border in the width calculation */
+}
