Adde sortable.js for the notes

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -23,7 +23,7 @@
 </div>
 
 <!-- Display existing notes -->
-<div class="note-desktop-container">
+<div class="note-desktop-container" data-controller="sortable">
   <% @notes.each do |note| %>
     <div class="note-container <%= 'first-note' if note == @notes.first %>">
       <div class="note-left">
