Changed some colors in the mobile view

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -32,7 +32,7 @@
       </div>
       <div class="note-right">
         <%= button_to note_path(note), method: :delete, data: { confirm: 'Are you sure?' }, class:"delete-btn" do %>
-          <i class="fa-solid fa-trash" style="color: #202122;font-size: 24px;"></i>
+          <i class="fa-solid fa-trash" style="color: #ffffff;font-size: 24px;"></i>
         <% end %>
       </div>
     </div>
