--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -144,13 +144,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #333232;
+    margin: 10px 0;
     padding: 20px;
+    color: #ffffff;
     -moz-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
     -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
-  }
-  .note-container.first-note {
-    border-top: 1px solid rgb(38, 37, 37);
   }
   .note-title {
     font-weight: bold;
