--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -103,6 +103,9 @@
 
 /* CSS rules for the dashboard on phones go here */
 @media only screen and (max-width: 480px) {
+  body {
+    background-image: url("ToDoBG.svg");
+  }
   /* Headline */
   .head-container {
     width: 100vw;
